src/test/ui/issues/issue-29181.stderr
error[E0599]: no method named `homura` found for type `{integer}` in the current scope
  --> $DIR/issue-29181.rs:16:7
   |
LL |     0.homura(); //~ ERROR no method named `homura` found
   |       ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0599`.
